--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 </head>
 <body>
+<a href="https://github.com/reyesr/html5-storage-benchmark"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_red_aa0000.png" alt="Fork me on GitHub"></a>
 <div class="header">
     <div class="html5logo"> <img src="img/HTML5.png"></div>
     <h1>HTML5 Offline Storage Benchmark</h1>
