--- a/index.html
+++ b/index.html
@@ -19,12 +19,20 @@
 
 </head>
 <body>
+<a href="https://github.com/reyesr/html5-storage-benchmark"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_red_aa0000.png" alt="Fork me on GitHub"></a>
 <div class="header">
     <div class="html5logo"> <img src="img/HTML5.png"></div>
     <h1>HTML5 Offline Storage Benchmark</h1>
     <div id="ua" class="useragent"></div>
 </div>
-<div id="finalchart"><button class="inactive" disabled="disabled" id="startbutton">Initializing...</button></div>
+<div id="finalchart">
+    <button class="inactive" disabled="disabled" id="startbutton">Initializing...</button>
+    <div id="choices">
+        <input type="checkbox" checked="checked" id="localStorageChoice"> <label for="localStorageChoice">localStorage</label>
+        <input type="checkbox" checked="checked" id="webSQLChoice"> <label for="webSQLChoice">WebSQL</label>
+        <input type="checkbox" checked="checked" id="indexedDBChoice"> <label for="indexedDBChoice">IndexedDB</label>
+    </div>
+</div>
 <div id="charts"></div>
 <div id="result"></div>
 
@@ -55,11 +63,13 @@
         var bulkInjectCount = 2000;
         var indexes = [];
 
-        indexes.push(localStorageTester);
-        indexes.push(webSQLTester);
-        indexes.push(indexedDbTester);
+        $("#localStorageChoice").is(":checked") &&  indexes.push(localStorageTester);
+        $("#webSQLChoice").is(":checked") &&  indexes.push(webSQLTester);
+        $("#indexedDBChoice").is(":checked") &&  indexes.push(indexedDbTester);
 
-        createTest("Lookup", indexes, function (store) { return mkTestLookup(store, bulkInjectCount, 8, 8); }, "Looking up " + injectCount + "x 8-byte elements, one by one");
+        benchmark.reset();
+        createTest("Lookup", indexes, function (store) { return mkTestLookup(store, injectCount, 8, 8); }, "Looking up " + injectCount + "x 8-byte elements, one by one");
+        createTest("Lookup2", indexes, function (store) { return mkTestLookup(store, bulkInjectCount, 8, 8); }, "Looking up " + bulkInjectCount + "x 8-byte elements, one by one");
         createTest("Inject-S", indexes, function (store) { return mkTestInject(store, injectCount, 8, 8); }, "Injecting " + injectCount + "x 8-byte elements, one by one");
         createTest("Inject-L", indexes, function (store) { return mkTestInject(store, injectCount, 8, 512); }, "Injecting " + injectCount + "x 512-byte elements, one by one");
         createTest("InjectBulk-S", indexes, function (store) { return mkTestInjectBulk(store, bulkInjectCount, 8, 8); }, "Injecting " + bulkInjectCount + "x 8-byte elements, in bulk");
@@ -72,6 +82,9 @@
     function startTest() {
         $("#startbutton").attr("disabled", "disabled");
         $("#startbutton").removeClass("active").addClass("inactive");
+        $("#localStorageChoice").attr("disabled", "disabled");
+        $("#webSQLChoice").attr("disabled", "disabled");
+        $("#indexedDBChoice").attr("disabled", "disabled");
 
         benchmark.startTests(function() {
             $("#startbutton").hide();
@@ -112,6 +125,9 @@
         openIfAvailable(indexedDbTester, "IndexedDB");
         openIfAvailable(webSQLTester, "webSQL");
 
+        $("#localStorageChoice").change(initTests);
+        $("#webSQLChoice").change(initTests);
+        $("#indexedDBChoice").change(initTests);
     });
 
     </script>
