--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
     <div id="debug"></div>
 
     <script type="text/javascript">
-        window.console = new LocalDebug($("#debug"));
+
+        //window.console = new LocalDebug($("#debug"));
 
         var localStorageTester = new LocalStorageAccess();
     var indexedDbTester = new IndexedDBAccess();
